[package]
name = "tinap"
version = "0.1.0"
authors = ["Tarek Ziade <tarek@ziade.org>"]
edition = "2018"

[dependencies]
async-std = "0.99"
async-macros = "1"
futures = "0.1"
futures-core-preview = "=0.3.0-alpha.19"
futures-io-preview = "=0.3.0-alpha.19"
futures-timer = "1.0.2"
time = "0.1"
conv = "0.3.3"
structopt = "0.3"
graceful = "0.1.1"

